New warning icons, and improvements in how they are used
The existing use was the turnWarning which is shown in the board window if
the side to move is suspicious.  This now scales along with the stone pixmaps.

Also, finish up the support for warning icons in the on-line match dialog.
This is untested so far.

--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -1569,7 +1569,7 @@ Indicates whether it is black's or white's turn.</string>
                     <string/>
                    </property>
                    <property name="pixmap">
-                    <pixmap resource="q4go.qrc">:/BoardWindow/images/boardwindow/warning.png</pixmap>
+                    <pixmap resource="q4go.qrc">:/images/warn-tri16.png</pixmap>
                    </property>
                   </widget>
                  </item>
