Add cross mark action to the board window toolbar
A simple oversight. The action already existed in the menu.

--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -2748,6 +2748,7 @@ After placing and/or undo release button for returning to starting point automat
    <addaction name="editTriangle"/>
    <addaction name="editCircle"/>
    <addaction name="editSquare"/>
+   <addaction name="editCross"/>
    <addaction name="editLetter"/>
    <addaction name="editNumber"/>
    <addaction name="separator"/>
