--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -56,6 +56,7 @@
     <file>sgfs/lnd.sgf</file>
     <file>sgfs/tactics.sgf</file>
     <file>sgfs/connections.sgf</file>
+    <file>sgfs/captures.sgf</file>
   </qresource>
   <qresource prefix="/">
     <file>images/stone_b16.png</file>
