--- a/src/slideshow_gui.ui
+++ b/src/slideshow_gui.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Go tutorials</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="q4go.qrc">
+    <normaloff>:/ClientWindowGui/images/clientwindow/qgo.png</normaloff>:/ClientWindowGui/images/clientwindow/qgo.png</iconset>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QTreeWidget" name="tutorialList">
