--- a/src/newgame_gui.ui
+++ b/src/newgame_gui.ui
@@ -36,7 +36,7 @@
     <number>6</number>
    </property>
    <item row="1" column="0">
-    <widget class="Line" name="line">
+    <widget class="Line" name="dividerline_1">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -559,7 +559,7 @@
     </widget>
    </item>
    <item row="5" column="0">
-    <widget class="Line" name="line_2">
+    <widget class="Line" name="dividerline_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
